Task7/gatekeeper/constraint-templates/runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirerunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequireRunAsNonRoot
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirerunasnonroot

        pod_run_as_non_root {
          input.review.object.spec.securityContext.runAsNonRoot == true
        }

        container_run_as_non_root(container) {
          container.securityContext.runAsNonRoot == true
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not pod_run_as_non_root
          not container_run_as_non_root(container)
          msg := sprintf("container must set runAsNonRoot: true or inherit it from pod: %v", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("container must not run as UID 0: %v", [container.name])
        }

        violation[{"msg": msg}] {
          input.review.object.spec.securityContext.runAsUser == 0
          msg := "pod must not run as UID 0"
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.readOnlyRootFilesystem == true
          msg := sprintf("container must set readOnlyRootFilesystem: true: %v", [container.name])
        }
